<resources>
    <string name="app_name">Reaction Time Test</string>
    <string name="menu_title">Reaction Test</string>
    <string name="start_game_button">Start Game</string>
    <string name="statistics_button">Statistics</string>
    <string name="time_left_text">Time left: 00:00</string>
    <string name="average_reaction_time_text">Average: ??? ms</string>
    <string name="dots_clicked">dots clicked: 0</string>
    <string name="statistics_info">тут ничего нет</string>
    <string name="back_button">Back</string>
    <string name="pause_text">Pause</string>
    <string name="finish_text">Finish</string>
    <string name="resume_button">Resume</string>
    <string name="exit_button">Exit</string>
    <string name="element_text"></string>
    <string name="reset_button">Restart</string>
</resources>