<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PauseDialogFragment">

    <TextView
        android:id="@+id/pause_text"
        android:text="@string/pause_text"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="50dp"
        android:fontFamily="@font/baloo_bhai_2"
        android:layout_height="100dp"/>

    <Button
        android:id="@+id/resume_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/resume_button" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/exit_button" />

</FrameLayout>