<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">


    <TextView
        android:id="@+id/timer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="29dp"
        android:text="@string/time_left_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/game_field"
        app:layout_constraintEnd_toStartOf="@+id/average_reaction_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/average_reaction_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="29dp"
        android:text="@string/average_reaction_time_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/game_field"
        app:layout_constraintStart_toEndOf="@+id/timer_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dots_amount_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="29dp"
        android:text="@string/dots_clicked"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/game_field"
        app:layout_constraintStart_toEndOf="@+id/timer_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pause_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="500dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/game_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/average_reaction_text_view"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pause" />

    <TextView
        android:id="@+id/initial_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="50dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pause_button" />

</androidx.constraintlayout.widget.ConstraintLayout>